--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,14 @@
+body{
+    cursor: url("../assets/cursor/yugicursor.png"), default;
+}
+button, 
+a, 
+img:hover, 
+button:hover, 
+a:hover{
+    cursor: url("../assets/cursor/yamiyugicursorGLOW.png"), auto;
+}
+
 .bg-video{
     position: absolute;
     z-index: -2;
@@ -119,6 +130,5 @@
     transition: transform 0.2s;
 }
 .card:hover{
-    cursor: pointer;
     transform: scale(1.2);
 }
